Fix footer responsiveness on small devices

--- a/assets/scss/_footer_project.scss
+++ b/assets/scss/_footer_project.scss
@@ -306,6 +306,12 @@
     a {
       color: $white;
     }
+    @media (max-width: 767px) {
+      &{
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   }
 
   .footer-bottom-middle {
